compiler-core/src/parse/snapshots/gleam_core__parse__tests__unicode_fullwidth_colon.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 2327
expression: "pub fn wibble(x： Int) { x }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn wibble(x： Int) { x }

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:16
  │
1 │ pub fn wibble(x： Int) { x }
  │                ^^ Unexpected character

This looks like ascii colon, but it is actually the unicode fullwidth
colon.
